--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body{
     margin: 0;
+    
+}
+.wrapper{
+    width: 1300px;
+    margin: 0 auto;
     background-color: cadetblue;
 }
 header{
@@ -22,12 +27,12 @@ section{
     min-height: 800px;
 }
 .menu{
-    width: 850px;
+    width: 650px;
     border-right: 1px solid #131c45;
 }
 
 .basket{
-    width: 450px;
+    width: 500px;
 }
 
 .item{
